--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,14 +1,154 @@
 <h1> WELCOME TO ACEBOOK </h1>
 
-<%#  ---- log in form ---- %>
+<!-- Button trigger modal -->
+
+<div class="container"> 
+  <button class="btn btn-primary btn-lg" href="#signup" data-toggle="modal" data-target=".log-sign">Sign In/Register</button>
+  </div>
+
+<!-- Modal -->
+<%# button %>
+<div class="modal fade bs-modal-sm log-sign" id="myModal" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-sm">
+    <div class="modal-content">
+<%# tabs %>
+        <div class="bs-example bs-example-tabs">
+            <ul id="myTab" class="nav nav-tabs">
+              <li id="tab1" class=" active tab-style login-shadow "><a href="#signin" data-toggle="tab">Log In</a></li>
+              <li id="tab2" class=" tab-style "><a href="#signup" data-toggle="tab">Sign Up</a></li>
+              
+            </ul>
+        </div>
+<%# modal content %>
+      <div class="modal-body">
+        <div id="myTabContent" class="tab-content">
+        
+          <!-- Sign In Form -->
+        <div class="tab-pane fade active in" id="signin">
+            <form class="form-horizontal">
+            <fieldset>
+            <%#  ---- log in form text input---- %>              
 <div class="log-in-form">
-  <h1>Login</h1>
   <%= form_with model: @user do |user| %>
-  <%= user.email_field :email, class: 'form_control', :required => true, placeholder: "Email" %>
-  <%= user.password_field :password, class: 'form_control', :required => true, placeholder: "Password" %>
-  <%= user.submit "Log In", class: 'form-button' %>
-  <% end %>
+    <div class="group"> <!-- Email input-->
+      <%= user.label :email, 'Email address', class: 'label' %>
+      <%= user.email_field :email, class: 'input', :required => true %><span class="highlight"></span><span class="bar"></span>
+    </div>
+    <div class="group"> <!-- Password input-->
+      <%= user.label :password, 'Password', class: 'label' %>    
+      <%= user.password_field :password, class: 'input', :required => true %><span class="highlight"></span><span class="bar"></span>
+    </div>
+
+    <%# ------ Forgotten password link ----- %>
+           <div class="forgot-link">
+            <a href="#forgot" data-toggle="modal" data-target="#forgot-password"> I forgot my password</a>
+            </div>
+    
+      <!-- Log in Button -->
+    <div class="control-group">
+      <label class="control-label" for="signin"></label>
+      <div class="controls">
+        <%= user.submit "Log In", class: "btn btn-primary btn-block", id: "signin", name: "signin" %>   
+      </div>
+    </div>
+  </div>        
+      </fieldset>
+    <% end %>
+  </div>
+          
+          
+        <div class="tab-pane fade" id="signup">
+            <form class="form-horizontal">
+            <fieldset>
+
+
+
+
+            <!-- Sign Up Form -->
+            <!-- Text input-->
+            <div class="group">
+<input required="" class="input" type="text"><span class="highlight"></span><span class="bar"></span>
+    <label class="label" for="date">First Name</label></div>
+            
+            <!-- Text input-->
+            <div class="group">
+<input required="" class="input" type="text"><span class="highlight"></span><span class="bar"></span>
+    <label class="label" for="date">Last Name</label></div>
+            
+            <!-- Password input-->
+            <div class="group">
+<input required="" class="input" type="text"><span class="highlight"></span><span class="bar"></span>
+    <label class="label" for="date">Email</label></div>
+            
+            <!-- Text input-->
+            <div class="group">
+<input required="" class="input" type="password"><span class="highlight"></span><span class="bar"></span>
+    <label class="label" for="date">Password</label></div>
+              <em>1-8 Characters</em>
+            
+              <div class="group2">
+<input required="" class="input" type="text"><span class="highlight"></span><span class="bar"></span>
+    <label class="label" for="date">Country</label></div>
+            
+            
+            
+            <!-- Button -->
+            <div class="control-group">
+              <label class="control-label" for="confirmsignup"></label>
+              <div class="controls">
+                <button id="confirmsignup" name="confirmsignup" class="btn btn-primary btn-block">Sign Up</button>
+              </div>
+            </div>
+            </fieldset>
+            </form>
+      </div>
+    </div>
+      </div>
+      <!--<div class="modal-footer">
+      <center>
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </center>
+      </div>-->
+    </div>
+  </div>
 </div>
+  
+   
+
+<!--modal2 DELETE IF FORGOTTEN PASSWORD FUNCTIONALITY NOT ADDED-->
+
+<%# <div class="modal fade bs-modal-sm" id="forgot-password" tabindex="0" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-sm">
+    <div class="modal-content">
+        <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">Password will be sent to your email</h4>
+      </div>
+      <div class="modal-body">
+        <form class="form-horizontal">
+        <fieldset>
+        <div class="group">
+<input required="" class="input" type="text"><span class="highlight"></span><span class="bar"></span>
+    <label class="label" for="date">Email address</label></div>
+        
+        
+        <div class="control-group">
+              <label class="control-label" for="forpassword"></label>
+              <div class="controls">
+                <button id="forpasswodr" name="forpassword" class="btn btn-primary btn-block">Send</button>
+              </div>
+            </div>
+          </fieldset>
+            </form>
+          
+      </div>
+    </div>
+    
+  </div>
+</div> %>
+
+
+<%# ---------------------------------------------------------------------- %>
 
 <%#  ---- sign up form ---- %>
 <div class="sign-up-form">
