--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -3,7 +3,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-3">
-<p>Hello, <%=current_user.name%></p>
+<%# <p>Hello, <%=@current_user.name % ></p> %>
       <%= render 'form', room: Room.new %>
       <hr>
       <% @rooms.each do |room| %>
@@ -20,6 +20,9 @@
     <% if @room.present? %>
       <div class="chat-room">
         <p><%= @room.name%></p>
+        <% @room.messages.each do |message|%>
+        <p> <%= message.content %> </p>
+        <% end %>
         <div class="chat-box">
           <%= render 'messages/form', message: Message.new, room: @room%>
         </div>
