--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,15 +4,15 @@
     <title>Acebook</title>
     <%= csrf_meta_tags %>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="app/assets/stylesheets/application.css">
-    <%# <%= stylesheet_link_tag  'application', media: 'all' %>
+    <%# <link rel="stylesheet" href="app/assets/stylesheets/application.css"> %>
+    <%= stylesheet_link_tag  'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
   </head>
 
   <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
       
-    <label class="switch">
+    <%# <label class="switch">
       <div class="wrapper">
         <div class="toggle">
           <input class="toggle-input" type="checkbox"/>
@@ -23,7 +23,22 @@
           </div>
         </div>
       </div>
-    </label>
+    </label> %>
+
+  
+  <div class="toggle">
+	<div class="mask">
+		<div class="icon-wrap active">
+			<div class="icon sun"></div>
+		</div>
+		<div class="icon-wrap">
+			<svg copy="icon" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 300 300"><path d="M187.73 151.4c0-55.24 29.34-104.19 76.27-129.72C242.21 9.81 216.56 3 188.15 3 99.15 3 36.2 70.46 36.2 151.4S98.3 299 187.33 299c28.26 0 53.87-6.82 75.69-18.69-46.48-25.31-75.29-73.8-75.29-128.91z" fill="#283445"/></svg>
+		</div>
+	</div>
+	<div class="bar"></div>
+</div>
+<div class="page-content">
+</div>
       
 
       <%= yield %>
